--- a/PolicyGradient_LunarLander.ipynb
+++ b/PolicyGradient_LunarLander.ipynb
@@ -308,9 +308,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_pytorch)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
